# DL-CN

./: .gitignore  GuillemGonzalo.ipynb  README.md  main.py  pyproject.toml
app/: get_best.py  hyperparam_search.py  main.py  train_cnn.py
app/cnn/: __init__.py  config.py  dataset.py  model.py  trainer.py
app/data/: data_viewer.py  file_manager.py  zip_manager.py
app/eda/: comparasion.py  data_augmentation.py
app/image/: image_processing.py
log/: optuna_study.db
models/: link_model.md
models/cnn/: best_hyperparams.json  best_model.pth
